Bug#32730 - Concurrent TRUNCATEs crash Falcon engine - Added TRUNCATE sync object to StorageTable - Fixed root page bug in Index::rebuildIndexes